[gd_scene load_steps=3 format=3 uid="uid://cfwldnw50xw7n"]

[ext_resource type="Script" path="res://scripts/login_menu.gd" id="1_6bby3"]
[ext_resource type="FontFile" uid="uid://xg2eku68amxe" path="res://fonte/Gamer.ttf" id="2_cqku1"]

[node name="LoginMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6bby3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 1)

[node name="Titulo" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 8.0
offset_right = 598.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("2_cqku1")
theme_override_font_sizes/font_size = 32
text = "Salve seu progresso criando uma conta!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Aviso" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 248.0
offset_top = 216.0
offset_right = 392.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cqku1")
theme_override_font_sizes/font_size = 16
text = "As senhas nao coincidem!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Aviso2" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 248.0
offset_top = 216.0
offset_right = 392.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cqku1")
theme_override_font_sizes/font_size = 16
text = "Uma conta ja foi criada!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UsernameRe" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 96.0
offset_right = 408.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("2_cqku1")
theme_override_font_sizes/font_size = 16
placeholder_text = "Usuario"
scroll_fit_content_height = true

[node name="UsernameLo" type="TextEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 248.0
offset_top = 136.0
offset_right = 392.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("2_cqku1")
theme_override_font_sizes/font_size = 16
placeholder_text = "Usuario ou Email"

[node name="NomeRe" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 120.0
offset_right = 408.0
offset_bottom = 145.0
theme_override_fonts/font = ExtResource("2_cqku1")
theme_override_font_sizes/font_size = 16
placeholder_text = "Nome"
scroll_fit_content_height = true

[node name="EmailRe" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 144.0
offset_right = 408.0
offset_bottom = 169.0
theme_override_fonts/font = ExtResource("2_cqku1")
theme_override_font_sizes/font_size = 16
placeholder_text = "Email"
scroll_fit_content_height = true

[node name="PasswordRe" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 168.0
offset_right = 408.0
offset_bottom = 193.0
theme_override_fonts/font = ExtResource("2_cqku1")
theme_override_font_sizes/font_size = 16
placeholder_text = "Digite sua senha"
scroll_fit_content_height = true

[node name="PasswordLo" type="TextEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 248.0
offset_top = 168.0
offset_right = 392.0
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("2_cqku1")
theme_override_font_sizes/font_size = 16
placeholder_text = "Digite sua senha"

[node name="RePasswordRe" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 192.0
offset_right = 408.0
offset_bottom = 217.0
theme_override_fonts/font = ExtResource("2_cqku1")
theme_override_font_sizes/font_size = 16
placeholder_text = "Confirme sua senha"
scroll_fit_content_height = true

[node name="Registrar" type="Button" parent="."]
layout_mode = 0
offset_left = 248.0
offset_top = 248.0
offset_right = 392.0
offset_bottom = 282.0
theme_override_fonts/font = ExtResource("2_cqku1")
theme_override_font_sizes/font_size = 32
text = "Registrar-se
"

[node name="ToggleRegisterLogin" type="Button" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 304.0
offset_right = 608.0
offset_bottom = 331.0
theme_override_fonts/font = ExtResource("2_cqku1")
theme_override_font_sizes/font_size = 23
text = "Ja possui uma conta?"

[node name="Entrar" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 272.0
offset_top = 216.0
offset_right = 368.0
offset_bottom = 250.0
theme_override_fonts/font = ExtResource("2_cqku1")
theme_override_font_sizes/font_size = 32
text = "Entrar"

[node name="Voltar" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 304.0
offset_right = 106.0
offset_bottom = 338.0
theme_override_fonts/font = ExtResource("2_cqku1")
theme_override_font_sizes/font_size = 32
text = "Voltar"

[connection signal="button_down" from="Registrar" to="." method="_on_registrar_button_down"]
[connection signal="button_down" from="ToggleRegisterLogin" to="." method="_on_toggle_register_login_button_down"]
[connection signal="button_down" from="Entrar" to="." method="_on_entrar_button_down"]
[connection signal="button_down" from="Voltar" to="." method="_on_voltar_button_down"]
